--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,9 @@
         <div class="main-buttons">
           <h1 data-bind="text: '@balance'"></h1>
 
-          <div class="balance" data-bind="text: balance"></div>
+          <div class="button-wrap">
+            <div class="balance" data-bind="text: balance"></div>
+          </div>
 
           <div class="button-wrap" data-bind="dxAction: '#send_email'">
             <div data-bind="dxButton: { text: '@write' }"></div>
