--- a/views/send_email.html
+++ b/views/send_email.html
@@ -6,7 +6,7 @@
             <!--<div class="phone-value" data-bind="text: dis_phone"></div>-->
 
             <div class="dx-fieldset">
-                <div class="dx-field">
+                <div class="dx-field field_email">
                     <div id="messageInput" class="dx-field-value" data-bind="dxTextArea: { value: message, placeholder: '@message' }"></div>
                 </div>
                 <div class="dx-field">
