--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <div data-options="dxView : { name: 'home', title: '@appletaxi' }">
-    <div class="main-buttons">
+    <div class="main-buttons" data-options="dxContent : { targetPlaceholder: 'content' }">
       <h1 data-bind="text: '@balance'"></h1>
 
       <div class="button-wrap">
