--- a/views/send_email.html
+++ b/views/send_email.html
@@ -4,6 +4,7 @@
         <div class="main-content">
 
             <!--<div class="phone-value" data-bind="text: dis_phone"></div>-->
+            <h2 data-bind="text: '@message'"></h2>
 
             <div class="dx-fieldset">
                 <div class="dx-field field_email">
