--- a/index.css
+++ b/index.css
@@ -292,3 +292,11 @@ body
 .home_register.dx-content .dx-placeholder{
     font-size: 48px;
 }
+
+.detail_balance .item {
+    border-bottom: 2px black;
+}
+
+.detail_balance_div.dx-content {
+    font-size: 24px;
+}
