--- a/index.css
+++ b/index.css
@@ -201,10 +201,10 @@ body
     left: 50%;
     margin-left: -50%;
     margin-right: auto;
-    margin-top: -170px;
+    /*margin-top: -170px;*/
     /*position: fixed;*/
     text-align: center;
-    top: 50%;
+    /*top: 50%;*/
     width: 300px;
 }
 
