--- a/index.css
+++ b/index.css
@@ -303,3 +303,25 @@ body
 .cashout #messageInput {
     width: 100%;
 }
+
+.cashout_process, .no_documents {
+    background-color: lightgrey;
+    color: red;
+    padding: 20px;
+    display: none;
+    width: 90%;
+}
+.cashout_success {
+    border: 1px solid green;
+    color: green;
+    padding: 20px;
+    display: none;
+    width: 90%;
+}
+.cashout_error {
+    border: 1px solid red;
+    color: red;
+    padding: 20px;
+    display: none;
+    width: 90%;
+}
