change version to 7 and add documents title

--- a/views/home.html
+++ b/views/home.html
@@ -46,6 +46,7 @@
             <p>Проезд Энтузиастов, д.5</p>
             <p>с 10:00 до 16:00</p>
             <p>AppleTaxi</p>
+            <p>Необходимые документы: стс, паспорт, лицензия</p>
         </div>
     </div>
 </div>
