--- a/views/cashout.html
+++ b/views/cashout.html
@@ -9,7 +9,8 @@
 
             <div class="dx-fieldset">
                 <div class="dx-field field_email">
-                    <div id="messageInput" class="dx-field-value " data-bind="dxTextArea: { value: cashout, placeholder: '@cashout_text' }"></div>
+                    <input type="number" id="messageInput"/>
+                    <!--<div id="messageInput2" class="dx-field-value " data-bind="dxNumberBox: { min: 0, max: 100, showSpinButtons: true, step: 5, value: cashout, placeholder: '@cashout_text' }"></div>-->
                 </div>
                 <div class="dx-field">
                   <div class="button-wrap" data-bind="dxAction: cashOut">
