small fixes in mobile app

--- a/views/cashout.html
+++ b/views/cashout.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="dx-field">
                   <div class="button-wrap" data-bind="dxAction: cashOut">
-                    <div data-bind="dxButton: { text: '@send' }"></div>
+                    <div data-bind="dxButton: { text: '@send' }" class="cashoutButton"></div>
                   </div>
                 </div>
             </div>
