--- a/views/home_register.html
+++ b/views/home_register.html
@@ -11,6 +11,8 @@
           <div data-bind="dxButton: { text: '@register' }"></div>
         </div>
       </div>
+      <div class="view-footer" data-bind="text: version"></div>
+
     </div>
 </div>
 
