--- a/views/send_email.html
+++ b/views/send_email.html
@@ -19,6 +19,7 @@
 
             <div style='clear:both'></div>
         </div>
+        <div class="view-footer" data-bind="text: version"></div>
     </div>
 </div>
 
