--- a/views/detail_balance.html
+++ b/views/detail_balance.html
@@ -7,6 +7,7 @@
 
             <div style='clear:both'></div>
         </div>
+        <div class="view-footer" data-bind="text: version"></div>
     </div>
 
 </div>
