--- a/views/home_unactive.html
+++ b/views/home_unactive.html
@@ -7,6 +7,7 @@
             <div data-bind="dxButton: { text: '@init_action' }"></div>
           </div>
         </div>
+        <div class="view-footer" data-bind="text: version"></div>
     </div>
 </div>
 
