--- a/views/cashout.html
+++ b/views/cashout.html
@@ -4,7 +4,7 @@
         <div class="main-content">
 
             <!--<div class="phone-value" data-bind="text: dis_phone"></div>-->
-            <h2>Ваш кошелёк:<span class="purse_data"></span> </h2>
+            <h2>Ваш Киви-кошелёк:<span class="purse_data"></span> </h2>
             <h2 data-bind="text: '@cashout_text'"></h2>
 
             <div class="dx-fieldset">
@@ -15,7 +15,7 @@
                 <div class="dx-field">
                   <div class="button-wrap" data-bind="dxAction: cashOut">
                     <!--<div data-bind="dxButton: { text: '@send' }" class="cashoutButton"></div>-->
-                    <input type="button" style="font-size: 22px; background-color: yellow; width: 90%;" value="Отправить" />
+                    <input type="button"  value="Отправить" />
 
                   </div>
                 </div>
