--- a/views/home_register.html
+++ b/views/home_register.html
@@ -8,7 +8,8 @@
       </div>
       <div class="dx-field">
         <div class="button-wrap" data-bind="dxAction: register">
-          <div data-bind="dxButton: { text: '@register' }"></div>
+            <!--<div data-bind="dxButton: { text: '@register' }"></div>-->
+            <input type="button" class="register" value="Зарегистрироваться"  />
         </div>
       </div>
       <div class="view-footer" data-bind="text: version"></div>
