--- a/views/send_email.html
+++ b/views/send_email.html
@@ -12,7 +12,8 @@
                 </div>
                 <div class="dx-field">
                   <div class="button-wrap" data-bind="dxAction: sendEmail">
-                    <div data-bind="dxButton: { text: '@send' }"></div>
+                      <!--<div data-bind="dxButton: { text: '@send' }"></div>-->
+                      <input type="button"  value="Отправить" />
                   </div>
                 </div>
             </div>
