--- a/views/set_purse.html
+++ b/views/set_purse.html
@@ -15,7 +15,7 @@
                 <div class="dx-field">
                   <div class="button-wrap" data-bind="dxAction: setPurse">
                       <!--<div data-bind="dxButton: { text: '@save' }"></div>-->
-                      <input type="button" style="font-size: 22px; background-color: yellow; width: 90%;" value="Сохранить" />
+                      <input type="button"  value="Сохранить" />
 
                   </div>
                 </div>
