--- a/views/home.html
+++ b/views/home.html
@@ -29,6 +29,10 @@
         <div class="button-wrap" data-bind="dxAction: '#detail_balance'">
             <input type="button"  value="Детализация" data-bind="dxAction: '#detail_balance'"/>
         </div>
+        <br />
+        <div class="button-wrap" data-bind="dxAction: '#send_photo'">
+            <input type="button" class="green"  value="Отправить фото" data-bind="dxAction: '#send_photo'"/>
+        </div>
 
         <div class="balance_block">
               <div class="button-wrap">
