--- a/views/send_photo.html
+++ b/views/send_photo.html
@@ -14,6 +14,11 @@
             <input type="button" class="send_photo"  value="Отправить" data-bind="dxAction: sendPhoto" />
 
             <div style='clear:both;'></div>
+
+            <div class="photo_process">
+                <p>Ничего не нажимайте мы отправляем фото</p>
+            </div>
+
         </div>
         <div class="view-footer" data-bind="text: version"></div>
     </div>
