--- a/views/home_register.html
+++ b/views/home_register.html
@@ -4,7 +4,9 @@
       <h2 data-bind="text: '@title_enter'"></h2>
 
       <div class="dx-field">
-        <div id="titleInput" class="dx-field-value" data-bind="dxTextBox: { value: title, placeholder: '@title' }"></div>
+          <input type="number" id="titleInput"/>
+
+          <!--<div id="titleInput" class="dx-field-value" data-bind="dxTextBox: { value: title, placeholder: '@title' }" id="titleInput"></div>-->
       </div>
       <div class="dx-field">
         <div class="button-wrap" data-bind="dxAction: register">
