--- a/views/home.html
+++ b/views/home.html
@@ -39,6 +39,10 @@
                 <div class="balance" data-bind="text: balance"></div>
               </div>
 
+            <div class="button-wrap rent_pay_button" data-bind="dxAction: '#rent_pay'">
+                <input type="button" value="Заплатить аренду с таксометра"  />
+            </div>
+
               <div class="button-wrap" data-bind="dxAction: '#send_email'">
                 <div data-bind="dxButton: { text: '@write' }"></div>
               </div>
