--- a/views/home.html
+++ b/views/home.html
@@ -24,6 +24,7 @@
             Вам необходимо обновить приложение.<br /><b><a href="#" onclick="window.open('market://details?id=ru.softmg.appletaxidrivers', '_system','location=no')">Нажмите!</a></b>
         </div>
 
+        <h1 data-bind="text: title"></h1>
         <h1 data-bind="text: '@balance'"></h1>
 
         <div class="button-wrap" data-bind="dxAction: '#detail_balance'">
