--- a/views/cashout.html
+++ b/views/cashout.html
@@ -4,7 +4,21 @@
         <div class="main-content">
 
             <!--<div class="phone-value" data-bind="text: dis_phone"></div>-->
-            <h2>Ваш Киви-кошелёк:<span class="purse_data"></span> </h2>
+            <h2 class="purse_label">Ваш Киви-кошелёк:<span class="purse_data"></span> </h2>
+            <h2 class="card_label">Ваша карта:<span class="card_data"></span> </h2>
+            <h2>Куда переводим?</h2>
+
+            <div class="where_to_pay">
+                <label class="purse_label">
+                    <input type="radio" name="where_to_pay" value="qiwi" checked="checked"/>
+                    <img src="Resources/qiwi.png">
+                </label>
+                <label class="card_label">
+                    <input type="radio" name="where_to_pay" value="card" />
+                    <img src="Resources/cards.png">
+                </label>
+            </div>
+
             <h2 data-bind="text: '@cashout_text'"></h2>
 
             <div class="dx-fieldset">
