--- a/views/set_card.html
+++ b/views/set_card.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="card_text">
-                <p>Подходят только карты VISA или MasterCard </p>
+                <p>Внимание!!!<br/>только VISA или MasterCard </p>
             </div>
             <div class="button-wrap" data-bind="dxAction: setCard">
                 <input type="button"  value="Сохранить" />
