--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
 
             <input type="button" class="set_purse" value="Ввести кошелек" data-bind="dxAction: '#set_purse'"/>
             <div class="purse_info">
-                <h1>Ваш номер кошелька:</h1>
+                <h1>Ваш КИВИ кошелёк:</h1>
                 <h1 class="purse_data" data-bind="text: '@purse'"></h1>
             </div>
 
