--- a/views/cashout.html
+++ b/views/cashout.html
@@ -4,9 +4,9 @@
         <div class="main-content">
 
             <!--<div class="phone-value" data-bind="text: dis_phone"></div>-->
-            <h2 class="purse_label">Ваш Киви-кошелёк:<span class="purse_data"></span> </h2>
-            <h2 class="card_label">Ваша карта:<span class="card_data"></span> </h2>
-            <h2>Куда переводим?</h2>
+            <h2 class="purse_label green">Ваш Киви-кошелёк: <span class="purse_data red"></span> </h2>
+            <h2 class="card_label green">Ваша карта: <span class="card_data red"></span> </h2>
+            <h2 class="green">Сделать перевод:</h2>
             <p class="where_to_pay_choice">на КИВИ-кошелёк</p>
             <div class="where_to_pay">
                 <label class="purse_label">
