--- a/index.css
+++ b/index.css
@@ -484,6 +484,8 @@ h2.purse_label {
     border-bottom: 1px solid black;
     padding-bottom: 10px;
     margin-bottom: 0px !important;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .card_label {
@@ -502,6 +504,8 @@ h2.green.bold {
 
 h2.card_label {
     margin-bottom: 10px !important;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 h2.cashout_text {
